..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
..F....... [ZBX-8012] added target blank links for IT services children (Oleg, Eduard)
..F....... [ZBX-7624] fixed pie charts legend alignment (Eduard)
..F....... [ZBX-8029] changed built-in font size from 0 to 1 for Zabbix home page and date in maps and graphs to support image functions for HHVM (Ivo)
..F....... [ZBX-7625] changed the execution order of API checks (Oleg)
..F....... [ZBX-8032] fixed links displaying in host inventories overview page (Eduard)
..F....... [ZBX-7120] fixed undefined index in menu for event csv export (Eduard)
..F....... [ZBX-6675] fixed graph header, if items belong to multiple hosts (Oleg)
A.F....... [ZBX-7781] fixed no error being triggered when trying to pass the "auth" parameter to a method that does not require authentication (Pavels)
..F....... [ZBX-8001] fixed host massupdate inventory tab being reset after choosing an inventory mode (Ivo)
..F....... [ZBX-7873] removed redundant error message in login page in event when frontend access for guest is not available (Eduard)
..F....... [ZBX-7969] fixed discovery checks sorting in action configuration page (Eduard)
..F....... [ZBX-7969] fixed sorting by name in discovery rule page (Eduard)
..F....... [ZBX-7826] fixed padding near textarea in acknowledges page (Eduard)
...G...PS. [ZBX-4998] fixed inconsistency of logging on Linux and Windows agents, and fixed information level logging at debug level 0 (igors)
....I..... [ZBX-6235] fixed unnecessary compilation of C code when only --enable-java is passed to ./configure (asaveljevs)