@@ -40,6 +40,7 @@ A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macro
 A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
+..F....... [ZBX-6596] fixed trigger sorting by hostname (Eduard)
 ..F....... [ZBX-8012] added target blank links for IT services children (Oleg, Eduard)
 ..F....... [ZBX-7624] fixed pie charts legend alignment (Eduard)
 ..F....... [ZBX-8029] changed built-in font size from 0 to 1 for Zabbix home page and date in maps and graphs to support image functions for HHVM (Ivo)
